// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Aarsavregningsmeldinger > TrygdeavgiftErIkkeForskuddsvisFakturert > matcher snapshot 1`] = `

<div class="alertstripe_feilmelding navds-alert navds-alert--info navds-alert--small">
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="333"
    class="navds-alert__icon"
  >
    <title id="333">
      Informasjon
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M3.25 4A.75.75 0 0 1 4 3.25h16a.75.75 0 0 1 .75.75v16a.75.75 0 0 1-.75.75H4a.75.75 0 0 1-.75-.75zM11 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0m-1.25 3a.75.75 0 0 1 .75-.75H12a.75.75 0 0 1 .75.75v4.75h.75a.75.75 0 0 1 0 1.5h-3a.75.75 0 0 1 0-1.5h.75v-4h-.75a.75.75 0 0 1-.75-.75"
      clip-rule="evenodd"
    >
    </path>
  </svg>
  <div class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--small">
    Trygdeavgift er ikke forskuddsvis fakturert
  </div>
</div>

`;

exports[`Aarsavregningsmeldinger > TrygdeavgiftSkalIkkeBetalesTilNav > matcher snapshot 1`] = `

<div class="alertstripe_feilmelding navds-alert navds-alert--info navds-alert--small">
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="333"
    class="navds-alert__icon"
  >
    <title id="333">
      Informasjon
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M3.25 4A.75.75 0 0 1 4 3.25h16a.75.75 0 0 1 .75.75v16a.75.75 0 0 1-.75.75H4a.75.75 0 0 1-.75-.75zM11 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0m-1.25 3a.75.75 0 0 1 .75-.75H12a.75.75 0 0 1 .75.75v4.75h.75a.75.75 0 0 1 0 1.5h-3a.75.75 0 0 1 0-1.5h.75v-4h-.75a.75.75 0 0 1-.75-.75"
      clip-rule="evenodd"
    >
    </path>
  </svg>
  <div class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--small">
    Trygdeavgift skal ikke betales til NAV
  </div>
</div>

`;

exports[`Aarsavregningsmeldinger > ÅrsavregningIkkeStøttetSakstypeMelding > matcher snapshot 1`] = `

<div
  data-test
  id="333"
  class="alertstripe_feilmelding navds-alert navds-alert--warning navds-alert--small"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-labelledby="333"
    class="navds-alert__icon"
  >
    <title id="333">
      Advarsel
    </title>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25M12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75m-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
      clip-rule="evenodd"
    >
    </path>
  </svg>
  <div class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--small">
    Melosys støtter ikke årsavregning for denne kombinasjonen av sakstype/-tema. Støtte vil bli gjort tilgjengelig senere.
  </div>
</div>

`;
